# egis-agents-frontend

./: .gitignore  README.md  enterprise-ai-training-platform-design.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
docs/: implementation-plan.md  next-steps.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  router.ts  styles.css
frontend/src/components/: AppShell.vue
frontend/src/views/: ChatView.vue  HomeView.vue  KnowledgeView.vue  LearningView.vue  PlaygroundView.vue
frontend/src/views/chat/: constants.ts  markdown.ts  scope.ts  stream.ts  todo.ts  types.ts  useChat.ts
