[project]
name = "pension-gpt-backend"
version = "0.1.0"
description = "FastAPI backend for 养老险GPT"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
